kustomizations/victoria-logs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: victoria-logs
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: victoria-logs-cert
        namespace: victoria-logs-system
