kustomizations/victoria-logs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  parentRefs:
  - name: victoria-logs
    namespace: victoria-logs-system
  hostnames: []
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: victoria-logs
      port: 9428
